# zksync-crypto

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  deny.toml  rustfmt.toml
.config/: nextest.toml
crates/bellman/: .gitignore  Cargo.toml  README.md  run_buffered_multiexp.sh  run_diff_windows.sh  run_diff_windows_nightly.sh  run_diff_windows_nightly_futures.sh  run_insane_fft.sh  run_insane_lde.sh  run_insane_test.sh  run_insane_test_with_futures.sh  run_long_division.sh  run_parallel_jobs.sh  run_shared_l3.sh  run_test_on_nightly.sh
crates/bellman/src/: constants.rs  cs.rs  domain.rs  group.rs  lib.rs  log.rs  multicore.rs  multiexp.rs  multiexp_experiments.rs  prefetch.rs  singlecore.rs  source.rs
crates/bellman/src/gm17/: generator.rs  mod.rs
crates/bellman/src/groth16/: generator.rs  mod.rs  prover.rs  verifier.rs
crates/bellman/src/kate_commitment/: mod.rs
crates/bellman/src/marlin/: generator.rs  mod.rs  prover.rs
crates/bellman/src/plonk/: mod.rs  utils.rs
crates/bellman/src/precomputations/: natural_ordering.rs
crates/bellman/src/sonic/: mod.rs  util.rs
crates/bellman/src/tests/: dummy_engine.rs  mod.rs
crates/bellman/tests/: mimc.rs
crates/boojum/: Cargo.toml  proof.json  rust-toolchain.toml
crates/boojum/src/: lib.rs
crates/boojum/src/algebraic_props/: round_function.rs
crates/boojum/src/dag/: guide.rs  resolver_box.rs
crates/boojum/src/gadgets/: mod.rs
crates/codegen/: Cargo.toml
crates/codegen-bin/: Cargo.toml
crates/codegen-bin/src/: main.rs
crates/codegen/src/: circuits.rs  generate.rs  lib.rs  serialize.rs
crates/cs_derive/: Cargo.toml
crates/cs_derive/src/: utils.rs
crates/cs_derive/src/allocatable/: mod.rs
crates/cs_derive/src/selectable/: mod.rs
crates/cs_derive/src/var_length_encodable/: mod.rs
crates/cs_derive/src/witness_hook/: mod.rs
crates/cs_derive/src/witness_var_length_encodable/: mod.rs
crates/ff/: Cargo.toml  README.md
crates/ff/asm_tester/: Cargo.toml  test_with_features.sh  tmp.rs
crates/ff/asm_tester/benches/: multiplication.rs
crates/ff/asm_tester/src/: lib.rs  test_large_field.rs
crates/ff/ff_derive/src/: utils.rs
crates/ff/ff_derive_const/: Cargo.toml
crates/ff/ff_derive_const/src/: const_field_element.rs  const_repr.rs  lib.rs
crates/ff/src/: lib.rs  tests.rs
crates/ff/tester/: Cargo.toml  bench_with_features.sh  check_with_features.sh  tmp.rs
crates/ff/tester/benches/: multiplication.rs
crates/ff/tester/src/: assembly_4.rs  check_assembly_4.rs  check_cios.rs  lib.rs  mul_variant0.rs  test_large_cios_field.rs  test_large_field.rs  test_short_field.rs
crates/ff_derive/: Cargo.toml
crates/ff_derive/.cargo/: config.toml
crates/ff_derive/src/: lib.rs  utils.rs
crates/ff_derive/src/asm/: asm_derive.rs  impls_4.rs  mod.rs
crates/fflonk/: Cargo.toml
crates/fflonk/data/: scheduler_recursive_proof.json  scheduler_recursive_vk.json
crates/fflonk/docs/: spec.tex
crates/fflonk/src/: convenience.rs  lib.rs  prover.rs  test.rs  utils.rs  verifier.rs
crates/fflonk/src/definitions/: copy_permutation.rs  gates.rs  lookup.rs  mod.rs  proof.rs  setup.rs
crates/franklin-crypto/: Cargo.toml  README.md
crates/franklin-crypto/.github/workflows/: ci.yml
crates/franklin-crypto/src/: as_waksman.rs  constants.rs  group_hash.rs  interpolation.rs  lib.rs  pedersen_hash.rs  redjubjub.rs  util.rs
crates/franklin-crypto/src/alt_babyjubjub/: fs.rs  mod.rs  tests.rs
crates/franklin-crypto/src/generic_twisted_edwards/: bench.rs  edwards.rs  mod.rs  tests.rs
crates/franklin-crypto/src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs
crates/franklin-crypto/src/primitives/: mod.rs
crates/franklin-crypto/src/rescue/: mod.rs
crates/mersenne_field/: Cargo.toml  README.md
crates/mersenne_field/src/: arm_impl.rs  avx_512_impl.rs  base.rs  complex.rs  ext2_avx_512_impl.rs  ext_arm_impl.rs  ext_arm_interleaved_impl.rs  ext_avx_512_impl.rs  ext_avx_512_interleaved_impl.rs  field.rs  field_like.rs  lib.rs  ops.rs  quartic.rs
crates/pairing/: Cargo.toml
crates/pairing/benches/: pairing_benches.rs
crates/pairing/benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
crates/pairing/benches/bn256/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
crates/pairing/src/: base.rs  lib.rs  wnaf.rs
crates/pairing/src/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
crates/pairing/src/bn256/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs  pairing_certificate.rs
crates/pairing/src/compact_bn256/: ec.rs  fq.rs  fr.rs  mod.rs
crates/pairing/src/tests/: curve.rs  engine.rs  field.rs  repr.rs
crates/plonk-verifier-codegen/: Cargo.toml
crates/plonk-verifier-codegen-bin/: Cargo.toml
crates/plonk-verifier-codegen-bin/src/: main.rs
crates/plonk-verifier-codegen/src/: circuits.rs  generate.rs  lib.rs  serialize.rs
crates/plonk-verifier-codegen/template/: HardcodedValues.sol  Plonk4VerifierWithAccessToDNext.sol
crates/rescue-poseidon/: Cargo.toml
crates/rescue-poseidon/benches/: hashes.rs
crates/rescue-poseidon/examples/: main.rs
crates/rescue-poseidon/src/: lib.rs  sponge.rs  tests.rs  traits.rs
crates/rescue-poseidon/src/circuit/: matrix.rs  mod.rs  poseidon.rs  poseidon2.rs  rescue.rs  rescue_prime.rs  sbox.rs  sponge.rs  tests.rs
crates/rescue-poseidon/src/common/: domain_strategy.rs  matrix.rs  mod.rs  params.rs  sbox.rs  utils.rs
crates/rescue-poseidon/src/poseidon/: params.rs  poseidon.rs
crates/rescue-poseidon/src/poseidon2/: mod.rs  params.rs  poseidon2.rs  pow_runner.rs  sponge.rs  tests.rs  transcript.rs
crates/rescue-poseidon/src/rescue/: params.rs  rescue.rs
crates/rescue-poseidon/src/rescue_prime/: params.rs  rescue_prime.rs
crates/snark-wrapper/: Cargo.toml
crates/snark-wrapper/src/: lib.rs
crates/snark-wrapper/src/implementations/: mod.rs  verifier_builder.rs
crates/snark-wrapper/src/traits/: circuit.rs  mod.rs  pow.rs  transcript.rs  tree_hasher.rs
crates/snark-wrapper/src/verifier/: first_step.rs  fri.rs  mod.rs  quotient_contributions.rs  utils.rs
(+368 files in other folders)
