[package]
name = "codegen-bin"
version.workspace = true
edition = "2018"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zksync_solidity_vk_codegen.workspace = true
structopt = "0.3"
dialoguer = "0.8"

