[package]
name = "zksync_solidity_vk_codegen"
version.workspace = true
edition = "2018"
license = "MIT OR Apache-2.0"
description = "ZKsync solidity codegen for vks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
franklin-crypto = { workspace = true, features = ["plonk"] }
rescue_poseidon.workspace = true

handlebars = "3.5.5"
serde = "1"
serde_derive = "1"
serde_json = "1"

hex = "0.4.3"   
paste = "1.0"
ethereum-types = "=0.14.1"
