[package]
name = "zksync_ff"
version.workspace = true
edition = "2018"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Library for building and interfacing with finite fields, based on ff"
exclude = [
    "tester",
    "asm_tester"
]

[dependencies]
ff_derive = { workspace = true, optional = true }

hex = {version = "0.4", default-features = false, features = ["alloc"]}
rand = { version = "0.4", default-features = false}
byteorder = { version = "1", default-features = false}
serde = {version = "1", features = ["derive"], default-features = false}

embedded-io = { version = "0.6.1", features = ["alloc"]}

[features]
default = []
derive = ["ff_derive"]
asm_derive = ["derive", "ff_derive/asm"]
