[package]
name = "ff_derive_ce"
version.workspace = true
authors = ["Sean Bowe <ewillbefull@gmail.com>",    
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/matter-labs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/matter-labs/ff"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
proc-macro2 = "1"
quote = "1"
syn = "1"
serde = {version = "1", features = ["derive"]}

[features]
default = []
asm = []
serde = []
