[package]
name = "mersenne_field"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"]}
rand = {version = "0.8", default-features = false }
seq-macro = "0.3"

[features]
use_division = []
default = []
modular_ops = ["use_division"]
modular_ext4_ops = ["modular_ops"]