[package]
name = "zksync_pairing"
version.workspace = true
edition = "2018"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pairing-friendly elliptic curve library, based on pairing crate"

[dependencies]
ff = { workspace = true, features = ["derive"] }

rand = { version = "0.4", default-features = false}
byteorder = { version = "1", default-features = false}
cfg-if = "1.0"
serde = {version = "1", features = ["derive"], default-features = false}

[features]
default = []
asm = ["ff/asm_derive"]
