[package]
name = "plonk-verifier-codegen-bin"
version.workspace = true
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonk_verifier_codegen.workspace = true

structopt = "0.3"
dialoguer = "0.8"

[[bin]]
name = "generate"
path = "src/main.rs"
